--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .menu {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     height: 200px;
