--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .game{
-    display: none;
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
